added toggl api

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "ajt/guzzle-toggl": "^0.12.0",
         "laravel/framework": "5.3.*"
     },
     "require-dev": {
