--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "axios": "^0.15.3",
     "chart.js": "^2.4.0",
-    "coglayouts": "^1.0.1"
+    "coglayouts": "^1.0.1",
+    "normalize.css": "^5.0.0",
+    "select2": "^4.0.3"
   }
 }
