--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "ajt/guzzle-toggl": "^0.12.0",
-        "laravel/framework": "5.3.*"
+        "laravel/framework": "5.3.*",
+        "laravel/cashier": "~7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
